--- a/src/html/index.html
+++ b/src/html/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./assets/css/main.css" />
     <script src="https://kit.fontawesome.com/e08e6a29e6.js" crossorigin="anonymous"></script>
   </head>
-  <body>
+  <body class="body">
     <div class="page">
       <include src="./partials/header.html"></include>
       <include src="./partials/main.html"></include>
